RESOLVED FIXED22107
Fix compilation of WTF::AVLTree
https://bugs.webkit.org/show_bug.cgi?id=22107
Summary Fix compilation of WTF::AVLTree
Simon Hausmann
Reported 2008-11-06 10:56:56 PST
Some functions in AVLTree call get_lt and get_gt with a second argument that does not exist.
Attachments
Patch to fix compilation (2.37 KB, patch)
2008-11-06 10:57 PST, Simon Hausmann
no flags
Simon Hausmann
Comment 1 2008-11-06 10:57:24 PST
Created attachment 24948 [details] Patch to fix compilation
Darin Adler
Comment 2 2008-11-06 11:19:42 PST
Comment on attachment 24948 [details] Patch to fix compilation > + * wtf/AVLTree.h: > + (JSC::::remove): > + (JSC::::subst): This ChangeLog entry looks strange. I know it was produced by prepare-ChangeLog, but we shouldn't check in strange log entries just because the script made them. r=me
Simon Hausmann
Comment 3 2008-11-06 11:30:57 PST
Thanks, landed with corrected changelog in r38190
Simon Hausmann
Comment 4 2008-11-06 11:31:17 PST
Comment on attachment 24948 [details] Patch to fix compilation (clearing review after landing)
Note You need to log in before you can comment on or make changes to this bug.