2008-11-06  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22107

        Bug uncovered during RVCT port in functions not used. get_lt() and
        get_gt() takes only one argument - remove second argument where
        applicable.

Canonical link: https://commits.webkit.org/30408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38190 268f45cc-cd09-0410-ab3c-d52691b4dbfc